--- a/src/style.css
+++ b/src/style.css
@@ -5,5 +5,5 @@ h1{
 body{
 
     text-align: center;
-background: linear-gradient(to top, #e6b980 0%, #eacda3 100%);
+background: linear-gradient(to top, #c79081 0%, #dfa579 100%);
 }
