--- a/src/style.css
+++ b/src/style.css
@@ -5,5 +5,6 @@ h1{
 body{
 
     text-align: center;
-background: linear-gradient(to top, #c79081 0%, #dfa579 100%);
+background: rgb(94, 43, 43);
+    background: linear-gradient(90deg, rgba(94, 43, 43, 1) 0%, rgba(231, 184, 178, 1) 52%, rgba(94, 43, 43, 1) 100%);
 }
