--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,11 @@
 h1{
     color: rgb(255, 128, 240);
+    font-size: 43px;
 }
 
 body{
 
     text-align: center;
 background: rgb(94, 43, 43);
-    background: linear-gradient(90deg, rgba(94, 43, 43, 1) 0%, rgba(231, 184, 178, 1) 52%, rgba(94, 43, 43, 1) 100%);
+    background: radial-gradient(circle, rgba(94, 43, 43, 1) 0%, rgba(231, 184, 178, 1) 52%, rgba(94, 43, 43, 1) 100%);
 }
