--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,23 @@
 h1 {
     color: rgb(255, 128, 240);
     font-size: 43px;
-    animation: glitter 2s infinite;
-    font-family: 'Red Hat Display', sans-serif;
+    position: relative;
     display: inline-block;
+    text-shadow:  2px yellow;
+    font-family: 'Montserrat', sans-serif;
+    animation: glitter 2s alternate-reverse infinite;
 }
+
 @keyframes glitter {
-    0% {
-        box-shadow: 0 0 5px 0 yellow;
-      
+
+    0%,
+    100% {
+        text-shadow: 0 0 5px yellow, 0 0 12px yellow, 0 0 40px yellow;
     }
 
     50% {
-        box-shadow: 0 0 20px 5px yellow;
-      
-    }
-
-    100% {
-        box-shadow: 0 0 5px 0 yellow;
-       
+        text-shadow: none;
+     
     }
 }
 body{
