--- a/src/style.css
+++ b/src/style.css
@@ -27,3 +27,8 @@ body{
 background: rgb(151, 66, 245);
     background: radial-gradient(circle, rgba(151, 66, 245, 1) 0%, rgba(231, 184, 178, 1) 52%, rgba(94, 43, 43, 1) 100%);
 }
+
+form{
+
+    padding: 33px;
+}
