--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@ input{
 
     padding: 12px;
     border-radius: 12px;
-background-color: rgba(255, 248, 121, 0.341);
+border: 2px solid;
     color: rgb(255, 255, 255);
 }
 form{
