--- a/src/style.css
+++ b/src/style.css
@@ -27,12 +27,13 @@ body{
 background: rgb(151, 66, 245);
     background: radial-gradient(circle, rgba(151, 66, 245, 1) 0%, rgba(231, 184, 178, 1) 52%, rgba(94, 43, 43, 1) 100%);
 }
-input{
+.down{
 
     padding: 12px;
     border-radius: 12px;
 border: 2px solid;
     color: rgb(255, 255, 255);
+    width: 50%;
 }
 form{
 
