--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,8 @@ border-radius: 12px;
     border:none;
     padding: 14px;
     background-color: rgb(190, 122, 235);
-   
+   width: 150px;
+   color: rgb(255, 255, 255);
 }
 form{
 
