added class for the poem

--- a/src/style.css
+++ b/src/style.css
@@ -51,3 +51,10 @@ background-color: rgba(137, 43, 226, 0.17);
 border-radius: 12px;
 
 }
+
+.poem{
+
+
+    font-size: 14px;
+    background-color: aliceblue;
+}
