--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,10 @@ border-radius: 12px;
 
 .poem{
 
-
+margin: 44px;
     font-size: 14px;
-    background-color: aliceblue;
+    background-color: rgb(255, 255, 255);
+    padding: 22px;
+    width: 12%;
+    
 }
