--- a/src/style.css
+++ b/src/style.css
@@ -58,4 +58,7 @@ border-radius: 12px;
     background-color: rgb(255, 255, 255);
     padding: 22px;
     max-width: 200px;
+    border-left: 2px solid rgb(150, 2, 255);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
 }
