--- a/src/style.css
+++ b/src/style.css
@@ -62,3 +62,9 @@ border-radius: 12px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
+
+footer{
+
+  text-align: center;  
+  font-size: 15px;
+}
