--- a/src/style.css
+++ b/src/style.css
@@ -32,8 +32,9 @@ background: rgb(151, 66, 245);
     padding: 12px;
     border-radius: 12px;
 border: 2px solid;
-    color: rgb(235, 21, 21);
+    color: rgb(0, 0, 0);
     width: 50%;
+    border: none;
     
 }
 
