--- a/src/style.css
+++ b/src/style.css
@@ -65,7 +65,10 @@ border-radius: 12px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
+.poem strong{
 
+    color: blueviolet;
+}
 footer{
 
   text-align: center;  
