--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,7 @@ border-radius: 12px;
     border-left: 2px solid rgb(150, 2, 255);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    color: rgb(215, 46, 46);
 }
 .poem strong{
 
