--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,9 @@ padding: 16px;
     color: #000000;
     
 }
-
+.form-container{
+    background-color: rgb(255, 255, 255);
+}
 .skies{
 border-radius: 12px;
     border:none;
