--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,7 @@ font-family: 'Montserrat', sans-serif;
 
 .form-container{
 padding: 30px;
-    background-color: rgb(34, 22, 45);
+    background-color: rgba(157, 69, 239, 0.258);
     border-radius: 12px;
 }
 .skies{
