--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,10 @@ font-family: 'Montserrat', sans-serif;
     padding: 12px;
 }
 
+.hidden{
 
+    display: none;
+}
 .form-container{
 padding: 30px;
     background-color: rgba(157, 69, 239, 0.258);
