Add 'generating' CSS animation
- Introduced a CSS animation named 'generating'
- Utilized keyframes to create a blinking effect by toggling visibility
- Implemented both standard and Webkit keyframes for better browser compatibility

--- a/src/style.css
+++ b/src/style.css
@@ -102,3 +102,19 @@ footer{
 a{
     color: rgb(114, 16, 179);
 }
+
+.generating {
+    animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
+}
+
+@-webkit-keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
+}
